# dcmloupe

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
.github/workflows/: cmake.yml
lib/: dicom_dict.h  dicom_display.h  dicom_header_parser.h
src/: dicom_dict.c  dicom_display.c  dicom_header_parser.c  main.c
